_archive/governance-services/2.3/tasks/rm-install-proc.md
---
author: Alfresco Documentation
source: Records Management System Administration Guide \(Certification\)
audience: [, ]
category: [Installation, Records Management]
keyword: [Records Management installation procedure, Records Management]
---

# Installing Records Management

This section describes the high-level procedure for installing Records Management with a new installation of Alfresco.

1.  Download and apply the Records Management AMP files to your existing Alfresco installation.

2.  Restart the Alfresco server.

3.  Log in to Alfresco Share and create the Records Management site.


-   **[Applying the Records Management AMP files](../tasks/rm-amp-install.md)**  
Records Management is installed by applying two AMP files to an existing Alfresco installation.
-   **[Creating the Records Management site](../tasks/rm-create-site.md)**  
After you've installed the Records Management AMP files, you're ready to go ahead and create a Records Management site.
-   **[Uninstalling the Records Management AMP files](../tasks/rm-amp-uninstall.md)**  
The Records Management AMP files can be uninstalled using the Module Management Tool \(MMT\).
-   **[Supported platforms](../concepts/supported-stacks.md)**  
The supported platforms are the combinations of operating systems, databases, and application servers that are tested and certified for Alfresco.

**Parent topic:**[Alfresco Records Management](../concepts/welcome-rm.md)

