_archive/governance-services/2.5/tasks/rm-install-proc.md
---
author: Alfresco Documentation
source: Records Management System Administration Guide \(Certification\)
audience: [, ]
category: [Installation, Records Management]
keyword: [Records Management installation procedure, Records Management]
---

# Installing Records Management

Use this information when installing and configuring Records Management.

1.  Download and apply the Records Management AMP files to your existing Alfresco installation.

2.  Restart the Alfresco server.

3.  Log in to Alfresco Share and create the Records Management site.


-   **[Prerequisites and supported platforms](../concepts/supported-stacks.md)**  
The supported platforms are the combinations of operating systems, databases, and application servers that are tested and certified for Alfresco.
-   **[Installing Records Management AMP files](../tasks/rm-amp-install.md)**  
Records Management is installed by applying two AMP files to an existing Alfresco installation.
-   **[Uninstalling the Records Management AMP files](../tasks/rm-amp-uninstall.md)**  
The Records Management AMP files can be uninstalled using the Module Management Tool \(MMT\).
-   **[Creating the Records Management site](../tasks/rm-create-site.md)**  
After you've installed the Records Management AMP files, you're ready to go ahead and create a Records Management site.
-   **[Records Management global properties settings](../concepts/rm-ref-global-props.md)**  
Use this information to understand the alfresco-global.properties settings for Records Management.

**Parent topic:**[Alfresco Records Management](../concepts/welcome-rm.md)

